<resources>
    <string name="app_name">Renta</string>
    <string name="title_activity_activitys_splash_screen">ActivitysSplashScreen</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="application_title">Renta</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Login</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="no_account">Not yet registered? Sign up now</string>
    <string name="password_edit_text_description">Enter your password</string>
    <string name="email_edit_text_description">Enter your email</string>
    <string name="toggle_password_visibility_description">Toggle password visibility</string>
    <string name="sign_up_text_header">Sign up</string>
    <string name="text_field_name">Name</string>
    <string name="text_field_username">Username</string>
    <string name="text_field_email">Email</string>
    <string name="text_field_phone_number">Phone Number</string>
    <string name="text_field_password">Password</string>
    <string name="text_field_re_password">Re-Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_a_user_login">Already a user? Login</string>
    <string name="text_view_welcome">Welcome</string>
    <string name="text_view_please_login_with_your_information">Please login with your information</string>
    <string name="text_view_password">Password</string>
    <string name="email_username">Email/Username</string>
    <string name="check_box_remember_me">Remember Me</string>
    <string name="different_login">Or Login with</string>
    <string name="create_acc">Create an account</string>
    <string name="reset_password">Forgot\nPassword</string>
    <string name="forget_password_detail">Provide your account email for which you want to reset your password!</string>
    <string name="reset_btn">Reset Password</string>
    <string name="make_selection">Make\nSelection</string>
    <string name="make_selection_detail">Select which contact details should we use to reset your password?</string>
    <string name="reset_password_phone">Phone Number</string>
    <string name="via_sms">via sms:</string>
    <string name="via_mail">via email:</string>
    <string name="new_credentials">New\nCredentials</string>
    <string name="identity_veryfied">Your identity has been verified!\nSet your new password</string>
    <string name="update_password_btn">Update</string>
    <string name="hint_new_pass">New Password</string>
    <string name="hint_confirm_new_pass">Confirm Password</string>
    <string name="email_sent">Email Sent</string>
    <string name="email_sent_description">Your request has been sent through your email!</string>
    <string name="search_hint">Search here....</string>
    <string name="hotels">Hotels</string>
    <string name="apartment">Apartments</string>
    <string name="profile_name">Hi Developer</string>
    <string name="EditProfile"> Edit Profile </string>
    <string name="UpdatenName"> Update</string>
    <string name="Address"> Address </string>
    <string name="default_web_client_id">308077184622-74n6h196h36j7ouhi6ugogikl73l8l20.apps.googleusercontent.com</string>
    <!-- Add other string resources as needed -->


</resources>