<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/login_bg"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="30dp"
    tools:context=".forgotpassword.ActivityForgotPassword">

    <!--         there will be no back button here!
    So we can just use only parent liner layout and add gravity="center"-->

    <TextView
        android:id="@+id/success_message_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="-50dp"
        android:fontFamily="@font/muli_black"
        android:gravity="center"
        android:text="@string/email_sent"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="30sp" />


    <ImageView
        android:id="@+id/success_message_icon"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_margin="20dp"
        android:src="@drawable/password_updated_icon" />


    <TextView
        android:id="@+id/success_message_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/muli"
        android:gravity="center"
        android:text="@string/email_sent_description"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="16sp" />


    <com.google.android.material.button.MaterialButton
        android:layout_marginTop="20dp"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:id="@+id/forget_password_next_btn"
        android:text="@string/action_sign_in_short"
        app:cornerRadius="10dp"
        android:onClick="verifyPhoneNumber" />


</LinearLayout>