<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragmentContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivitySignup">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_alignParentStart="true"
                android:layout_marginStart="23dp"
                android:src="@drawable/rentaicontransparent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginStart="64dp"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="-2dp"
                android:layout_toEndOf="@+id/imageView2"
                android:text="@string/sign_up_text_header"
                android:textColor="@color/cyan"
                android:textSize="35sp"
                android:textStyle="bold" />
        </RelativeLayout>

        <!-- signin form-->
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/signup_name1"
                    style="@style/OutlinedBox"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:gravity="center_horizontal"
                    android:hint="@string/text_field_name">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/signup_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPersonName" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/signup_username1"
                    style="@style/OutlinedBox"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:gravity="center_horizontal"
                    android:hint="@string/text_field_username">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/signup_username"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/signup_email1"
                    style="@style/OutlinedBox"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:gravity="center_horizontal"
                    android:hint="@string/text_field_email">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/signup_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/signup_phone_number1"
                    style="@style/OutlinedBox"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:gravity="center_horizontal"
                    android:hint="@string/text_field_phone_number">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/signup_phone_number"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/signup_password1"
                    style="@style/OutlinedBox"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:gravity="center_horizontal"
                    android:hint="@string/text_view_password">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/signup_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/signup_retype_password1"
                    style="@style/OutlinedBox"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:gravity="center_horizontal"
                    android:hint="@string/text_field_re_password">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/signup_retype_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword" />
                </com.google.android.material.textfield.TextInputLayout>
                <View
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"/>

                <RelativeLayout
                    android:layout_width="300dp"

                    android:layout_height="wrap_content">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/signup_button"
                        android:layout_width="130dp"
                        android:layout_height="50dp"
                        android:text="@string/sign_up"
                        android:textSize="20sp"
                        app:backgroundTint="@color/cyan"
                        app:cornerRadius="32dp" />

                    <TextView
                        android:id="@+id/loginRedirectText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentEnd="true"
                        android:layout_gravity="center"
                        android:layout_marginTop="5dp"
                        android:layout_marginEnd="3dp"
                        android:padding="8dp"
                        android:text="@string/already_a_user_login"
                        android:textColor="@color/cyan"
                        android:textSize="14sp" />


                </RelativeLayout>

            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</RelativeLayout>
