<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragmentContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg"
    tools:context=".ActivitySignup">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_alignParentStart="true"
                android:layout_marginStart="23dp"
                android:src="@drawable/rentaicontransparent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginStart="36dp"
                android:layout_marginTop="23dp"
                android:layout_marginEnd="-2dp"
                android:layout_toEndOf="@+id/imageView2"
                android:text="@string/EditProfile"
                android:textColor="@color/cyan"
                android:textSize="35sp"
                android:textStyle="bold" />
        </RelativeLayout>

        <!-- signin form-->
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/signup_name1"
                    style="@style/OutlinedBox"
                    android:layout_width="350dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:gravity="center_horizontal"
                    android:hint="@string/text_field_name">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/signup_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPersonName" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/signup_email1"
                    style="@style/OutlinedBox"
                    android:layout_width="350dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:gravity="center_horizontal"
                    android:hint="@string/text_field_email">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/signup_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/signup_phone_number1"
                    style="@style/OutlinedBox"
                    android:layout_width="350dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:gravity="center_horizontal"
                    android:hint="@string/text_field_phone_number">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/signup_phone_number"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/address"
                    style="@style/OutlinedBox"
                    android:layout_width="350dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:gravity="center_horizontal"
                    android:hint="@string/Address">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/changeAddress"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/signup_password1"
                    style="@style/OutlinedBox"
                    android:layout_width="350dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:gravity="center_horizontal"
                    android:hint="@string/text_view_password">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/signup_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/signup_retype_password1"
                    style="@style/OutlinedBox"
                    android:layout_width="350dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:gravity="center_horizontal"
                    android:hint="@string/text_field_re_password">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/signup_retype_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword" />
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/signup_button"
                    android:layout_width="187dp"
                    android:layout_height="56dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/UpdatenName"
                    android:textSize="20sp"
                    app:cornerRadius="32dp" />

                <RelativeLayout
                    android:layout_width="350dp"
                    android:layout_height="wrap_content">


                </RelativeLayout>

            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</RelativeLayout>
