<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg"
    android:padding="30dp"
    tools:context=".forgotpassword.ActivityResetPassword">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="goToHomeFromSetNewPassword"
            android:padding="5dp"
            android:src="@drawable/general_back_icon"/>


        <ImageView
            android:id="@+id/set_new_password_icon"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:src="@drawable/update_new_password_icon" />


        <TextView
            android:id="@+id/set_new_password_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/muli_black"
            android:gravity="center"
            android:text="@string/new_credentials"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="30sp" />


        <TextView
            android:id="@+id/set_new_password_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/muli"
            android:gravity="center"
            android:text="@string/identity_veryfied"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="16sp" />


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/new_pass"
                style="@style/OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="16dp"
                android:gravity="center_horizontal"
                android:hint="@string/hint_new_pass"
                app:layout_constraintStart_toStartOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/new_pass1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/confirm_new_pass"
                style="@style/OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="16dp"
                android:gravity="center_horizontal"
                android:hint="@string/hint_confirm_new_pass"
                android:layout_below="@+id/new_pass"
                app:layout_constraintStart_toStartOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/confirm_new_pass1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    />

            </com.google.android.material.textfield.TextInputLayout>


            <View
                android:id="@+id/viewSpacing"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_below="@id/confirm_new_pass"/>



            <com.google.android.material.button.MaterialButton
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_below="@id/viewSpacing"
                android:id="@+id/set_new_password_btn"
                android:text="@string/update_password_btn"
                app:cornerRadius="10dp"
                android:onClick="verifyPhoneNumber"
                />

        </RelativeLayout>
    </LinearLayout>
</ScrollView>