<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragmentContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg"
    tools:context=".LoginActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:alpha="0.7"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_above="@id/card_view"
        android:padding="28dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/rentaicontransparent"
            android:importantForAccessibility="no" />

    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        app:cardCornerRadius="28dp"
        android:layout_marginBottom="-25dp"
        app:cardElevation="28dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="450dp"
            android:orientation="vertical"
            android:padding="28dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_view_welcome"
                android:textColor="@color/cyan"
                android:textSize="32sp"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_view_please_login_with_your_information"
                android:alpha="0.7"/>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/emailField1"
                style="@style/OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="16dp"
                android:gravity="center_horizontal"
                android:hint="@string/email_username"
                app:layout_constraintStart_toStartOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/login_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <View
                android:layout_width="wrap_content"
                android:layout_height="20dp"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passwordField1"
                style="@style/OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                app:passwordToggleEnabled="true"
                android:layout_marginTop="16dp"
                android:gravity="center_horizontal"
                android:hint="@string/text_view_password"
                app:layout_constraintStart_toStartOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/login_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    />

            </com.google.android.material.textfield.TextInputLayout>



            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <TextView
                    android:id="@+id/forgot_password"
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"
                    android:textColor="@color/cyan"
                    android:text="I forgot my password"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"/>

            </RelativeLayout>
            <View
                android:layout_width="wrap_content"
                android:layout_height="20dp"/>

            <com.google.android.material.button.MaterialButton
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:id="@+id/login_button"
                android:backgroundTint="@color/cyan"
                android:text="Login"
                app:cornerRadius="10dp"/>

            <View
                android:layout_width="wrap_content"
                android:layout_height="10dp"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/different_login"
                    android:layout_gravity="center"
                    android:alpha="0.7"/>

                <TextView
                    android:id="@+id/signupRedirectText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_gravity="center"
                    android:layout_marginEnd="0dp"
                    android:textColor="@color/cyan"
                    android:alpha="0.7"
                    android:text="@string/create_acc" />
            </RelativeLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>
